--- a/src/Styles.css
+++ b/src/Styles.css
@@ -162,7 +162,6 @@
 }
 
 .tagsMenuList {
-    height: 100%;
     list-style-type:none;
     margin: 10px;
     padding: 0px;
@@ -173,4 +172,10 @@
     width: 100%;
     height: auto;
     word-wrap: break-word;
+}
+
+.searchSpinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
