--- a/src/Styles.css
+++ b/src/Styles.css
@@ -76,11 +76,11 @@
   white-space: pre-line;
 }
 
-.recipeActionsMenu {
+.actionsMenu {
   margin-left: 12px;
 }
 
-.recipeAction {
+.action {
   margin-right: 2px;
 }
 
@@ -107,11 +107,7 @@
 }
 
 .listRecipe li {
-    height:60px;
     display: flex;
-    align-items: baseline;
-    flex-direction: row;
-    margin: 8px 0 8px 0;
 }
 
 .listRecipe a {
@@ -147,7 +143,7 @@
     text-decoration: none;
 }
 
-.listRecipe .delete {
+li .deleteListItem {
     padding: 0;
     background-color: transparent;
     border: 0;
@@ -155,9 +151,10 @@
     font-weight: 700;
     color: #6c757d;
     margin-left: auto;
+    vertical-align: baseline;
 }
 
-.listRecipe .delete:hover, .listRecipe .delete:active, .listRecipe .delete:visited, .listRecipe .delete:focus {
+li .deleteListItemm, .deleteListItem:hover, .deleteListItem:active, .deleteListItem:visited, .deleteListItem:focus {
     background-color: transparent  !important; 
     border: 0  !important;
     float: right  !important;
@@ -165,6 +162,13 @@
     color: #6c757d  !important;
 }
 
+.listItem .deleteListItem { display: none; }
+.listItem:hover .deleteListItem, .listItem .deleteListItem:hover, .listItem .deleteListItem:active, .listItem .deleteListItem:visited, .listItem .deleteListItem:focus { 
+    display: initial; 
+    float: none !important; 
+    margin-left: 10px;
+ }
+ 
 .tagsMenu {
     border-right:1px solid #E1E3DF;
 }
@@ -182,3 +186,14 @@
     word-wrap: break-word;
 }
 
+.headerLink {
+    text-decoration:none;
+    color:#222;
+    font-size: small;
+    margin-right: 10px;
+}
+
+.headerLink:focus, .headerLink:hover, .headerLink:active {
+    text-decoration:none;
+    color:#222;
+}
